# era

./: .gitignore  README.md  index.html  package.json  vite.config.ts
public/: posts.json  shop.json
src/: app.tsx  main.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: liberal.rs  main.rs
src/app/: advert.tsx  banner.tsx  blogs.tsx  build.tsx  drawer.tsx  featured.tsx  frame.tsx  router.tsx  stats.tsx  storefront.tsx
src/pages/: app.tsx  developer.tsx  downloads.tsx  home.tsx  servers.tsx  shop.tsx
src/state/: adverts.ts  frontend.tsx  global.ts  me.ts  persist.ts  servers.ts  socket.ts  token.ts
src/styles/: advert.css  app.css  banner.css  blogs.css  build.css  downloads.css  drawer.css  featured.css  frame.css  servers.css  shop.css  stats.css
src/styles/pages/: home.css
