[package]
name = "era"
version = "0.0.0"
description = "An attempt at a recreation of the Era Fortnite Launcher."
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
