[package]
name = "era"
version = "0.0.0"
description = "Era Launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
reqwest = { version = "0.11.3", features = ["stream"] }
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
window-shadows = "0.2.2"
futures-util = "0.3.14"
serde_json = "1.0"
tokio = "1.36.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
